# shutdownhook

./: LICENSE  README.md  ShutdownHook.java
ants/: config-basic.json  config-lostfood.json  config-outpost.json  config.json  pom.xml
backstop/: config-demo.json  docker-build.sh  pom.xml
cleanup/: Cleanup1.java  Cleanup2.java  Cleanup3.java  README.md
colossus/: dependency-reduced-pom.xml  pom.xml  projects.md
colossus/minja-render/: CMakeLists.txt  build.sh  main.cpp
csv/: Csv1.java  Csv2a.java  Csv2b.java  Csv3.java  Csv3sav.java  Csv4.java  Muppets.csv  MuppetsEvolved.csv  README.md
diceball/: package-lock.json  package.json
dss/: README.md  fullbuild.sh  release.sh
evolve/: pom.xml
hack/: README.md  pom.xml
iview/: Baseline.java  README.md  SeanLive.java  Skeleton.java  SortedList.java
jdbjr/: BaseAction.java  ClassListAction.java  JdbJr.java  README.md  ThreadDetailAction.java  ThreadListAction.java  TimeBot.java  WatchMethodsAction.java  timebot.sh
lorawan/: lorawan.sql  pom.xml
misc/: Interpolate.java  multiverse_chronicle.md  procs.cgi  searchExchange.py
monthly/: README.md  pom.xml
mynotes/: dockerbuild.sh  fullbuild.sh
newshaiku/: bluesky.js  index.js  openai.js  package-lock.json  package.json  rss.js  twitter.js
radio/: README.md
roku/: callroku.js  roku.html
ruby/: README.md  pom.xml
s2rsvc/: pom.xml
sdweb/: config-ex.json  pom.xml
shl/: pom.xml
shx/: index.js  package-lock.json  package.json
smart-trials/: README.md  pom.xml  run.sh  xray.sh
tides/: config-sample.json  pom.xml
toolbox/: pom.xml
(+457 files in other folders)
